# seetconf

./: Makefile  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
examples/: Makefile
examples/e2e/: Makefile  config.py
examples/e2e/00simple/: config.json  main.py  output.txt
examples/e2e/00simple-json/: config.json  main.py  output.txt
examples/e2e/01simple-csv/: config.py  main.py
examples/e2e/01simple-csv/config/: yyy.csv
examples/e2e/02dump-init/: main.py  output.txt
examples/e2e/03dump-data/: main.py  output.txt
examples/e2e/10simple-spreadsheet/: main.py  output.txt
examples/integration/: Makefile  config.py
examples/integration/00json/: config.json  output.txt
examples/integration/01csv/config/: logger.csv
examples/integration/02adjust-json/: a.diff  config.json  output.txt
examples/integration/03adjust-csv/: a.diff  output.txt
examples/integration/03adjust-csv/config/: xxx.csv  yyy.csv
examples/integration/04adjust-missing-field-json/: a.diff  config.json  config.pre.json
examples/integration/05adjust-missing-field-csv/: a.diff  output.txt
examples/integration/05adjust-missing-field-csv/config/: logger.csv  xxx.csv  yyy.csv
examples/integration/05adjust-missing-field-csv/config.pre/: xxx.csv  yyy.csv
examples/integration/10init-json/: config.json
sheetconf/: __init__.py  cli.py  exceptions.py  langhelpers.py  types.py  usegspread.py  usepydantic.py
sheetconf/tests/: test_loader.py  test_usepydantic.py  testutils.py
sheetconf/tests/testdata/: config.json
(+1 files in other folders)
